--- a/src/app/pages/ncs/create/steps/step4/products-and-points/products-and-points.component.html
+++ b/src/app/pages/ncs/create/steps/step4/products-and-points/products-and-points.component.html
@@ -3,15 +3,21 @@
   <div class="dados-parceiro col razao-social">
     <div class="d-flex">
       <h2 class="mr-2">
-        {{this.nonComplicanceService.selectedProduct?.name||"Dado não preenchido"}}
+        {{
+          this.nonComplicanceService.selectedProduct?.name ||
+            "Dado não preenchido"
+        }}
       </h2>
       <p-chip>
         <i class="bi bi-ticket-perforated mr-2"></i>
-        {{this.nonComplicanceService.selectedProduct?.code||"000000"}}
+        {{ this.nonComplicanceService.selectedProduct?.code || "000000" }}
       </p-chip>
     </div>
     <p class="d-block">
-      {{this.nonComplicanceService.selectedProduct?.description||"Dado não preenchido"}}
+      {{
+        this.nonComplicanceService.selectedProduct?.description ||
+          "Dado não preenchido"
+      }}
     </p>
   </div>
   <div class="dados-parceiro col">
@@ -24,7 +30,9 @@
         <div>
           <span class="info-titulo">Quantidade Total</span>
           <br />
-          <span class="info-dados">{{this.nonComplicanceService.quantTotal||"0"}}</span>
+          <span class="info-dados">{{
+            this.nonComplicanceService.nc.quant_total || "0"
+          }}</span>
         </div>
       </div>
       <div class="contato-info d-flex flex-row">
@@ -32,7 +40,9 @@
         <div>
           <span class="info-titulo">Quantidade em Não Conformidade</span>
           <br />
-          <span class="info-dados">{{this.nonComplicanceService.quantNc||"0"}}</span>
+          <span class="info-dados">{{
+            this.nonComplicanceService.nc.quant_nc || "0"
+          }}</span>
         </div>
       </div>
       <div class="contato-info d-flex flex-row">
@@ -40,7 +50,7 @@
         <div>
           <span class="info-titulo">Percentual</span>
           <br />
-          <span class="info-dados">{{percent||"0"}}%</span>
+          <span class="info-dados">{{ percent || "0" }}%</span>
         </div>
       </div>
     </div>
@@ -56,7 +66,7 @@
       <i class="pi pi-directions mr-1"></i>
       <div>
         <span class="info-titulo">Instrução</span>
-        <br>
+        <br />
         <p class="info-dados">
           Lorem ipsum dolor sit amet, consectetur adipisicing e
         </p>
@@ -66,9 +76,11 @@
       <i class="bi bi-calculator mr-1"></i>
       <div>
         <span class="info-titulo">Número de Controle</span>
-        <br>
+        <br />
         <p class="info-dados">
-          {{this.nonComplicanceService.controlNumber||"Dado não preenchido"}}
+          {{
+            this.nonComplicanceService.controlNumber || "Dado não preenchido"
+          }}
         </p>
       </div>
     </div>
@@ -84,7 +96,7 @@
       <i class="pi pi-directions mr-1"></i>
       <div>
         <span class="info-titulo">Instrução</span>
-        <br>
+        <br />
         <p class="info-dados">
           Lorem ipsum dolor sit amet, consectetur adipisicing e
         </p>
