finaliza tela de Plano de ações

--- a/src/app/pages/ncs/create-prop/create-prop-stepper/create-prop-stepper.component.html
+++ b/src/app/pages/ncs/create-prop/create-prop-stepper/create-prop-stepper.component.html
@@ -43,7 +43,7 @@
             <app-action-plan></app-action-plan>
         </div>
         <div *ngIf="stepPosition === 3">
-            <app-notifications></app-notifications>
+            <app-step3></app-step3>
         </div>
         <div *ngIf="stepPosition === 4">
             <app-review-infomations></app-review-infomations>
