--- a/src/app/pages/ncs/about/costs/costs.component.html
+++ b/src/app/pages/ncs/about/costs/costs.component.html
@@ -1,3 +1,4 @@
+<p-toast></p-toast>
 <div class="d-flex flex-lg-row flex-column justify-content-between">
     <div class="d-flex">
         <div class="cabecalho">
@@ -11,7 +12,8 @@
     </div>
     <div class="d-flex justify-content-end align-items-center mb-3">
 
-        <button class="btn btn-dark ml-3">
+        <button class="btn btn-dark ml-3"
+        (click)="addDocumentDialog=true">
             Novo Custo Incorrido
             <i class="bi bi-plus"></i>
         </button>
@@ -56,9 +58,48 @@
                             type="button"
                             icon="pi pi-trash"
                             class="p-button-secondary p-button-text"
+                            (click)="deleteAction(doc)"
                     ></button>
                 </td>
             </tr>
         </ng-template>
     </p-table>
 </div>
+<p-confirmDialog #cd [style]="{ width: '50vw' }">
+    <ng-template pTemplate="footer">
+        <button type="button" class="btn btn-outline-dark" (click)="cd.reject()">
+            Não, cancelar
+        </button>
+        <button type="button" class="btn btn-dark" (click)="cd.accept()">
+            Sim, excluir!
+        </button>
+    </ng-template>
+</p-confirmDialog>
+<p-dialog [(visible)]="addDocumentDialog" [modal]="true" styleClass="p-fluid">
+    <ng-template pTemplate="header">
+        <div>
+            <h2>Registrar Custo Incorrido</h2>
+            <h3>
+                Informe o valor e anexe o relatório de custos ou documento para registrar um custo incorrido.
+            </h3>
+        </div>
+    </ng-template>
+    <ng-template pTemplate="content">
+    <div class="editar-campo">
+        <label for="name">Valor</label>
+        <input
+                currencyMask [(ngModel)]="doc.name" [options]="{ prefix: 'R$ ', thousands: '.', decimal: ',' }"
+        />
+    </div>
+    </ng-template>
+    <ng-template pTemplate="footer">
+        <div class="">
+            <button
+                    type="button"
+                    class="btn btn-dark"
+            >
+                Registrar Custo Incorrido <i class="bi bi-check2"></i>
+            </button>
+        </div>
+    </ng-template>
+</p-dialog>
