--- a/src/app/pages/ncs/create-prop/steps/step3/action-plan.component.html
+++ b/src/app/pages/ncs/create-prop/steps/step3/action-plan.component.html
@@ -1,3 +1,4 @@
+<p-toast></p-toast>
 <div class="cabecalho">
     <h1 class="mr-3">Plano de Ações</h1>
     <p>
@@ -55,7 +56,7 @@
     </div>
 </div>
 <div class="card">
-    <p-table [value]="actions">
+    <p-table [value]="propService.actions">
         <ng-template pTemplate="header">
             <tr>
                 <th>Descrição</th>
