--- a/src/app/pages/ncs/create-prop/steps/step4/notification.component.css
+++ b/src/app/pages/ncs/create-prop/steps/step4/notification.component.css
@@ -2,12 +2,15 @@ h2 {
     font-size: 28px;
 }
 
+.cabecalho {
+    min-width: 400px;
+}
+
 .cabecalho h1 {
     font-size: 25px;
     font-weight: 500;
     margin-bottom: 0px;
     margin-top: 0px;
-    color: black;
 }
 
 .cabecalho p {
@@ -36,4 +39,30 @@ label {
     font-size: 13px;
     font-weight: bold;
     margin-bottom: 2px;
+}
+
+.editar-buttons {
+    margin-top: 30px;
+}
+
+.editar-buttons i {
+    font-size: 12px;
+    margin-left: 5px;
+}
+
+.auto-complete-title{
+    font-size: 13px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.auto-complete-label {
+    font-size: 11px;
+    color: gray;
+
+}
+
+.p-autocomplete{
+    border-radius: 5px;
+    border: 2px solid rgb(51, 51, 51);
 }
