--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,6 @@
   <app-bootstrap></app-bootstrap>
 </div>
 
-<!-- <div *ngIf="!isLoggedIn">
+<div *ngIf="!isLoggedIn">
   <app-login></app-login>
-</div> -->
+</div>
